--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
-  
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
@@ -47,13 +48,16 @@
       </div>
       
     </div>
+
+    <div class="social-icons">
+      <ion-icon name="logo-instagram" class="insta icon"></ion-icon>
+      <ion-icon name="logo-facebook" class="fbook icon"></ion-icon>
+      <ion-icon name="logo-twitter" class="twitter icon"></ion-icon>
+    </div>
   </main>
   
 
   <footer>
-    <div class="social-icons">
-
-    </div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
